tdf#126266 adjust calculations for invisble tabs

This skips invisible tabs in many more places and at least fixes
the osx bug of the missing tabs of the NBB. It also fixes the
multiple highlighted tabs assertion for multiple rows from
TabControl::ImplGetItem.

I'm quite sure the tab rect calculation for multiple rows still
has the wrong height, so there might be minor overlapping.

Change-Id: I3a0a06ee73204b98e367563700fce4a49c066c1a